# aoc2025

./: Cargo.toml
.github/workflows/: rust.yml
src/day1.1/: main.rs
src/day1.2/: main.rs
src/day2.1/: main.rs
src/day2.2/: main.rs
src/day3.1/: main.rs
src/day3.2/: main.rs
src/day4.1/: main.rs
src/day4.2/: main.rs
src/day5.1/: main.rs
src/day5.2/: main.rs
